[sc-3343] Onboarding import dataset (#459)
* Fix magic step layout (signup)

* Import dataset page

  - child route under resources
  - description with links allowing to upload files/folder/links/csv
  - redirect to resources list page after uploading or importing dataset
  - dropdown with sample datasets calling `/import` endpoint when clicking on import data button

* Add delete dataset button on resource list page

  - display "delete dataset" button only when there are some sample resources in the kb
  - delete sample resources when clicking on the button
  - display toast message depending on success/error (success, partial success, error)
  - cleanup sample dataset on success

* Don't display "Add label" button if there is no labelset

* Don't navigate to resource list if canceling upload

* Display a toast when dataset import fails

  - Replace ToastService by SisToastService everywhere

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -40,25 +40,33 @@
       <pa-dropdown #uploadMenu>
         <pa-option
           icon="file"
-          (selectOption)="uploadFiles()">
+          (selectOption)="upload('files')">
           {{ 'upload.files' | translate }}
         </pa-option>
         <pa-option
           icon="folder"
-          (selectOption)="uploadFiles(true)">
+          (selectOption)="upload('folder')">
           {{ 'upload.folder' | translate }}
         </pa-option>
         <pa-option
           icon="link"
-          (selectOption)="uploadLink()">
+          (selectOption)="upload('link')">
           {{ 'upload.link' | translate }}
         </pa-option>
         <pa-option
           icon="file"
-          (selectOption)="uploadText()">
+          (selectOption)="upload('csv')">
           {{ 'upload.upload_from_csv' | translate }}
         </pa-option>
       </pa-dropdown>
+
+      <pa-button
+        *ngIf="hasSampleData | async"
+        kind="destructive"
+        aspect="basic"
+        (click)="deleteSampleDataset()">
+        {{ 'onboarding.dataset.delete' | translate }}
+      </pa-button>
     </div>
     <div class="status-buttons-container">
       <div
@@ -96,14 +104,16 @@
         *ngIf="(isAdminOrContrib | async) && selection.selected.length > 0">
         {{ 'resource.selected_count' | translate: { num: selection.selected.length || '' } }}
 
-        <app-label-dropdown
-          [labelSets]="labelSets$ | async"
-          (selectionChange)="updateLabelList($event)"
-          (close)="addLabelsToSelection()"
-          aspect="basic"
-          size="small">
-          {{ 'resource.add_labels' | translate }}
-        </app-label-dropdown>
+        <ng-container *ngIf="hasLabelSets | async">
+          <app-label-dropdown
+            [labelSets]="labelSets$ | async"
+            (selectionChange)="updateLabelList($event)"
+            (close)="addLabelsToSelection()"
+            aspect="basic"
+            size="small">
+            {{ 'resource.add_labels' | translate }}
+          </app-label-dropdown>
+        </ng-container>
 
         <pa-button
           *ngIf="selection.selected.length > 0"
