Add loading dataset message

--- a/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
+++ b/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
@@ -11,7 +11,7 @@
       (valueChange)="selectDataset = $event"></pa-select>
 
     <pa-button
-      [disabled]="!selectDataset"
+      [disabled]="!selectDataset || importing"
       (click)="importDataset()">
       {{ 'onboarding.dataset.import' | translate }}
     </pa-button>
