--- a/apps/dashboard/src/app/resources/resource-list.component.scss
+++ b/apps/dashboard/src/app/resources/resource-list.component.scss
@@ -13,6 +13,7 @@ $table-breakpoint: 1400px;
   background-color: $color-light-stronger;
   border-bottom: 1px solid $color-neutral-lighter;
   display: flex;
+  height: rhythm(6);
   justify-content: space-between;
   margin-bottom: rhythm(4);
   padding-bottom: rhythm(1);
@@ -159,9 +160,9 @@ table {
   }
 
   .cdk-column-status {
-    width: rhythm(20);
+    width: rhythm(32);
     @media (max-width: $table-breakpoint) {
-      width: rhythm(12);
+      width: rhythm(24);
     }
   }
 
@@ -210,4 +211,8 @@ table {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.popover-content {
+  text-align: center;
 }
