--- a/apps/dashboard/src/app/components/label/label-field/label-field.component.html
+++ b/apps/dashboard/src/app/components/label/label-field/label-field.component.html
@@ -1,7 +1,9 @@
 <div
   *ngIf="hasLabels | async"
-  class="label-field">
+  class="label-field"
+  [class.small-button]="size === 'small'">
   <app-label-dropdown
+    [size]="size"
     [labelSets]="labelSets$ | async"
     [selection]="selection"
     (selectionChange)="updateSelection($event)">
