--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
@@ -8,15 +8,14 @@
     {{ 'generic.close' | translate }}
   </pa-button>
 
-  <p>
+  <p class="body-s">
     <span [innerHtml]="'upload.csv_description' | translate"></span>
     <br />
     <span [innerHtml]="'upload.csv_format' | translate"></span>
   </p>
 
   <ncom-hint label="CSV format details">
-    <p></p>
-    <ul>
+    <ul class="csv-format">
       <li>Use commas as field delimiter</li>
       <li>Fields containing commas or line breaks must be enclosed in double quotes</li>
       <li>Double quotes appearing inside a quoted field must be prefixed with an additional double quote</li>
@@ -41,6 +40,7 @@
 
   <app-label-field
     *ngIf="resources.length > 0"
+    size="small"
     [(selection)]="selectedLabels"></app-label-field>
 
   <div
@@ -50,6 +50,7 @@
       *ngFor="let resource of resources"
       class="resource">
       <span paEllipsisTooltip>{{ resource[0] }}</span>
+      <code>{{ resource[2] }}</code>
     </div>
   </div>
 
