Fix status column: visible only for pending resources

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -249,7 +249,7 @@
           <th
             cdk-header-cell
             *cdkHeaderCellDef>
-            Status
+            {{ 'resource.status' | translate }}
           </th>
           <td
             cdk-cell
