Common primary upload button for resource list and dataset import page

--- a/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
+++ b/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
@@ -22,7 +22,9 @@
   <div class="upload-data">
     <p
       class="body-m"
-      #uploadLinksContainer
-      [innerHTML]="'onboarding.dataset.upload-links' | translate"></p>
+      #uploadLinksContainer>
+      {{ 'onboarding.dataset.upload-links' | translate }}
+    </p>
+    <app-upload-button (uploaded)="onUpload()"></app-upload-button>
   </div>
 </div>
