--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -29,36 +29,7 @@
         formControlName="query"></pa-input>
     </form>
     <div class="upload-container">
-      <pa-button
-        icon="circle-plus"
-        iconAndText
-        aspect="basic"
-        [paPopup]="uploadMenu"
-        alignPopupOnLeft>
-        {{ 'generic.upload' | translate }}
-      </pa-button>
-      <pa-dropdown #uploadMenu>
-        <pa-option
-          icon="file"
-          (selectOption)="upload('files')">
-          {{ 'upload.files' | translate }}
-        </pa-option>
-        <pa-option
-          icon="folder"
-          (selectOption)="upload('folder')">
-          {{ 'upload.folder' | translate }}
-        </pa-option>
-        <pa-option
-          icon="link"
-          (selectOption)="upload('link')">
-          {{ 'upload.link' | translate }}
-        </pa-option>
-        <pa-option
-          icon="file"
-          (selectOption)="upload('csv')">
-          {{ 'upload.upload_from_csv' | translate }}
-        </pa-option>
-      </pa-dropdown>
+      <app-upload-button></app-upload-button>
 
       <pa-button
         *ngIf="hasSampleData | async"
