--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -8,6 +8,7 @@
 
   <div class="resource-list-header">
     <form
+      *ngIf="isMainView; else backButton"
       class="search-bar-container"
       [formGroup]="searchForm"
       (ngSubmit)="search()">
@@ -28,43 +29,72 @@
         icon="search"
         formControlName="query"></pa-input>
     </form>
-    <div class="upload-container">
-      <app-upload-button></app-upload-button>
-
+    <ng-template #backButton>
       <pa-button
-        *ngIf="hasSampleData | async"
-        kind="destructive"
+        iconAndText
+        icon="chevron-left"
         aspect="basic"
-        (click)="deleteSampleDataset()">
-        {{ 'onboarding.dataset.delete' | translate }}
+        size="small"
+        (click)="displayStatus('PROCESSED')">
+        {{ 'resource.processed_resources' | translate }}
       </pa-button>
+    </ng-template>
+
+    <div class="upload-container">
+      <ng-container *ngIf="isMainView">
+        <app-upload-button (uploaded)="onUpload()"></app-upload-button>
+
+        <pa-button
+          *ngIf="hasSampleData | async"
+          kind="destructive"
+          aspect="basic"
+          (click)="deleteSampleDataset()">
+          {{ 'onboarding.dataset.delete' | translate }}
+        </pa-button>
+      </ng-container>
     </div>
     <div class="status-buttons-container">
       <div
         class="status-button"
-        *ngIf="pendingCount > 0">
+        *ngIf="(statusCount | async)?.pending > 0">
         <pa-button
           icon="clock-dash"
           size="small"
           kind="destructive"
-          aspect="basic">
+          aspect="basic"
+          #pendingPopoverDirective="paPopoverRef"
+          [paPopover]="pendingPopover"
+          paPopoverOffset="0px"
+          [active]="statusDisplayed.value === 'PENDING'"
+          (click)="displayStatus('PENDING')">
           {{ 'resource.status-help.pending' | translate }}
         </pa-button>
-        <div class="file-count">{{ pendingCount }}</div>
+        <div class="file-count">{{ (statusCount | async).pending }}</div>
       </div>
+      <pa-popover #pendingPopover>
+        <div class="popover-content">{{ 'resource.pending_resources_popover' | translate }}</div>
+      </pa-popover>
 
       <div
         class="status-button"
-        *ngIf="failedCount > 0">
+        *ngIf="(statusCount | async)?.error > 0">
         <pa-button
           icon="circle-cross"
           size="small"
           kind="destructive"
-          aspect="basic">
+          aspect="basic"
+          #failedPopoverDirective="paPopoverRef"
+          [paPopover]="failedPopover"
+          paPopoverOffset="0px"
+          [active]="statusDisplayed.value === 'ERROR'"
+          (click)="displayStatus('ERROR')">
           {{ 'resource.status-help.failed' | translate }}
         </pa-button>
-        <div class="file-count">{{ failedCount }}</div>
+        <div class="file-count">{{ (statusCount | async).error }}</div>
       </div>
+      <pa-popover #failedPopover>
+        <div class="popover-content">{{ 'resource.failed_resources_popover' | translate }}</div>
+      </pa-popover>
     </div>
   </div>
 
@@ -96,7 +126,7 @@
         </pa-button>
       </div>
       <div class="table-options">
-        <div>
+        <div *ngIf="isMainView">
           <nsi-dropdown-button
             size="small"
             aspect="basic"
@@ -223,12 +253,8 @@
           </th>
           <td
             cdk-cell
-            *cdkCellDef="let row"
-            (mouseenter)="getProcessingStatus(row.resource)"
-            [paTooltip]="statusTooltips[row.resource.id]"
-            paTooltipType="system"
-            [paTooltipOffset]="-16">
-            <nsi-status [status]="row.resource.metadata.status"></nsi-status>
+            *cdkCellDef="let row">
+            {{ row.status }}
           </td>
         </ng-container>
 
@@ -245,7 +271,9 @@
           </td>
         </ng-container>
 
-        <ng-container cdkColumnDef="actions">
+        <ng-container
+          cdkColumnDef="actions"
+          *ngIf="showActions">
           <th
             cdk-header-cell
             *cdkHeaderCellDef>
@@ -267,6 +295,7 @@
               class="resource-actions">
               <button
                 mat-menu-item
+                *ngIf="isMainView"
                 (click)="edit(row.resource.id)"
                 [disabled]="!(isAdminOrContrib | async)">
                 {{ 'generic.edit' | translate }}
@@ -285,6 +314,7 @@
               </button>
               <button
                 mat-menu-item
+                *ngIf="isMainView"
                 (click)="downloadAlgoliaJson(row.resource)">
                 {{ 'generic.download_algolia_json' | translate }}
               </button>
