Hide billing pages content when feature flag [sc-3433]

--- a/apps/dashboard/src/app/account/billing/plans/plans.component.html
+++ b/apps/dashboard/src/app/account/billing/plans/plans.component.html
@@ -1,4 +1,6 @@
-<div class="plans">
+<div
+  class="plans"
+  *ngIf="isBillingEnabled | async">
   <h2>{{ 'billing.plans_available' | translate }}</h2>
 
   <div class="container">
