fix feature flag check on link

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -125,7 +125,7 @@
       <div
         class="container plan"
         [class.billing-enabled]="isBillingEnabled"
-        [routerLink]="isBillingEnabled ? '../billing' : null">
+        [routerLink]="(isBillingEnabled | async) ? '../billing' : null">
         <div class="plan-name">
           <strong>{{ 'billing.plan' | translate }}:</strong>
           <span>{{ 'account.type.' + (accountType | async) | translate }}</span>
