--- a/libs/search-widget/src/tiles/_media-tile.scss
+++ b/libs/search-widget/src/tiles/_media-tile.scss
@@ -5,7 +5,7 @@
   }
 
   &.expanded .media-container.loading {
-    position: absolute;
+    display: none;
   }
 
   &.expanded .side-panel .scrollable-area {
