Make result title clickable

--- a/libs/search-widget/src/tiles/_tile.scss
+++ b/libs/search-widget/src/tiles/_tile.scss
@@ -9,6 +9,7 @@
   transition: background var(--transition-superfast);
 
   h3 {
+    cursor: pointer;
     font-size: var(--font-size-title-m);
     font-weight: var(--font-weight-title-m);
     line-height: var(--line-height-title-m-mobile);
