--- a/libs/search-widget/src/tiles/pdf-tile/PdfViewer.scss
+++ b/libs/search-widget/src/tiles/pdf-tile/PdfViewer.scss
@@ -6,6 +6,13 @@
   right: 0;
   top: 0;
 
+  .loading-container {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
   .pdf-controller {
     align-items: center;
     background-color: var(--color-neutral-lighter);
