Fix [sc-3457]: Display account deletion confirmation entirely
Use the new `noEllipsis` option on the checkbox used for asking account deletion confirmation

--- a/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
@@ -4,7 +4,9 @@
   </pa-modal-title>
   <pa-modal-content>
     <div>
-      <pa-checkbox [(value)]="deleteAccount">
+      <pa-checkbox
+        noEllipsis
+        [(value)]="deleteAccount">
         {{ 'account.delete_account_confirm' | translate: { account: (account | async)?.title } }}
       </pa-checkbox>
     </div>
