--- a/apps/dashboard/src/app/search/search.component.scss
+++ b/apps/dashboard/src/app/search/search.component.scss
@@ -2,4 +2,10 @@
 
 .search-page {
   padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) 5%;
+
+  .search-bar-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: rhythm(5);
+  }
 }
