New edit flow layout

--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.html
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.html
@@ -1,16 +1,34 @@
-<stf-section-navbar
-  [routes]="routes"
-  [hasInnerRoutes]="true">
-  <stf-section-navbar-header>
-    <nsi-back-button
-      class="back-button"
-      link=".."></nsi-back-button>
+<header>
+  <pa-button
+    iconAndText
+    icon="chevron-left"
+    aspect="basic"
+    size="small">
+    {{ 'resource.resources' | translate }}
+  </pa-button>
+  <div class="title-s">{{ resourceTitle | async }}</div>
+  <div class="actions">
+    <pa-button
+      icon="edit"
+      aspect="basic"></pa-button>
+    <pa-button
+      icon="label"
+      aspect="basic"></pa-button>
+  </div>
+</header>
 
-    <h1>{{ 'resource.edit' | translate }}</h1>
-    <div class="body-s">{{ resourceTitle | async }}</div>
-  </stf-section-navbar-header>
-
-  <stf-section-navbar-body>
+<div class="page-container">
+  <nav>
+    <ul>
+      <li>
+        <pa-icon
+          name="file"
+          size="small"></pa-icon>
+        <span>{{ 'resource.profile' | translate }}</span>
+      </li>
+    </ul>
+  </nav>
+  <div class="page-content">
     <router-outlet></router-outlet>
-  </stf-section-navbar-body>
-</stf-section-navbar>
+  </div>
+</div>
