--- a/apps/dashboard/src/app/ontologies/ontology/ontology.component.scss
+++ b/apps/dashboard/src/app/ontologies/ontology/ontology.component.scss
@@ -41,7 +41,7 @@
     color: var(--stf-gray-lighter-3);
   }
 
-  pa-checkbox {
+  pa-radio {
     display: inline-block;
     margin: rythm(1) rythm(3) 0 0;
   }
